--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Odkaz na externí CSS soubor -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
@@ -17,9 +17,12 @@
     </div>
 </header>
 <div class="main-content">
-    <h1>Visual Designer</h1>
-    <h2>Based in Indonesia</h2>
-    <button class="contact-button">Contact me
+    <h1>
+        Visual Designer<br>
+        Based in Indonesia
+    </h1>
+    <button class="contact-button">
+        Contact me
         <span class="arrow">➡️</span>
     </button>
 </div>
